kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: web
    spec: 
      containers: 
      - name: web
        image: lovyaginmihail/otus_nginx_images:0.0.2
        readinessProbe:
          httpGet: 
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }

        volumeMounts:
        - name: app
          mountPath: /app

      volumes:
      - name: app
        emptyDir: {}
