kubernetes-networks/web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: web
spec: 
  containers: 
  - name: web
    image: lovyaginmihail/otus_nginx_images:0.0.2
    readinessProbe:
      httpGet: 
        path: /index.html
        port: 80
    livenessProbe:
      tcpSocket: { port: 8000 }
    # livenessProbe:
    #   exec:
    #     command:
    #       - 'sh'
    #       - '-c'
    #       - 'ps aux | grep my_web_server_process'
    volumeMounts:
    - name: app
      mountPath: /app

  volumes:
  - name: app
    emptyDir: {}
